Prva i druga stavka uradjene

--- a/Ionic Source/www/templates/contacts/add.html
+++ b/Ionic Source/www/templates/contacts/add.html
@@ -25,11 +25,11 @@
 			<span>Scan contacts Nearby</span>
 			<p>Discover contacts around you</p>
 		</a>
-		<a class="item item-avatar no-border no-margin-bottom" ng-click="inviteSms()">
+		<!-- <a class="item item-avatar no-border no-margin-bottom" ng-click="inviteSms()">
 			<img src="css/img/icon-sms-border.png">
 			<span>Invite contacts via phonebook</span>
 			<p>Invite contact via SMS</p>
-		</a>
+		</a> -->
 	</div>
  </ion-content>
 </ion-view>
