--- a/Ionic Source/www/templates/tabs.html
+++ b/Ionic Source/www/templates/tabs.html
@@ -13,4 +13,7 @@
   <ion-tab icon="ion-android-more-horizontal" ui-sref="tab.settings">
     <ion-nav-view name="tab-settings"></ion-nav-view>
   </ion-tab>
+  <ion-tab icon="ion-ios-gear" ui-sref="tab.admin">
+    <ion-nav-view name="tab-admin"></ion-nav-view>
+  </ion-tab>
 </ion-tabs>
