--- a/Ionic Source/www/templates/admin/admin.html
+++ b/Ionic Source/www/templates/admin/admin.html
@@ -1,4 +1,4 @@
-<link href="css/contacts.css" rel="stylesheet">
+<link href="css/admin.css" rel="stylesheet">
 <ion-view title="List of Users" hide-tabs="false">
 <ion-header-bar align-title="left" class="bar-positive">
   <div class="buttons">
@@ -7,7 +7,7 @@
   <h1 class="title">List of users</h1>
 </ion-header-bar>
  <ion-content scroll="false" ng-controller="areacodeCtrl">
-	<h2 style="width: 100%; text-align: center;">List of normal users:</h2>
-  <div style="width: 100%; height: 100%;" id="list"></div>
+	<h2 class="pageTitle">List of normal users:</h2>
+  <div style="width: 94%; height: 100%;" id="list"></div>
  </ion-content>
 </ion-view>
