--- a/Ionic Source/www/templates/admin/changeRole.html
+++ b/Ionic Source/www/templates/admin/changeRole.html
@@ -1,4 +1,4 @@
-<link href="css/contacts.css" rel="stylesheet">
+<link href="css/admin.css" rel="stylesheet">
 <ion-view title="List of Users" hide-tabs="false">
 <ion-header-bar align-title="left" class="bar-positive">
   <div class="buttons">
@@ -7,10 +7,10 @@
   <h1 class="title">Change Role</h1>
 </ion-header-bar>
  <ion-content scroll="false" ng-controller="areacodeCtrl">
-	<h2>Username:</h2>
-	<h4>{{username}}</h4>
-	<h2>Phone number:</h2>
-	<h4>{{phone}}</h4>
+	<h2 class="userInfoTitle">Username:</h2>
+	<h4 class="userInfoData">{{username}}</h4>
+	<h2 class="userInfoTitle">Phone number:</h2>
+	<h4 class="userInfoData">{{phone}}</h4>
 
 	<select id="roleSelect">
 		<option id="admin" value="admin">Administrator</option>
