--- a/Ionic Source/platforms/android/res/xml/config.xml
+++ b/Ionic Source/platforms/android/res/xml/config.xml
@@ -60,13 +60,12 @@
     <splash density="land-xhdpi" src="resources/android/splash/drawable-land-xhdpi-screen.png" />
     <splash density="land-xxhdpi" src="resources/android/splash/drawable-land-xxhdpi-screen.png" />
     <splash density="land-xxxhdpi" src="resources/android/splash/drawable-land-xxxhdpi-screen.png" />
-    <splash density="port-ldpi" src="resources/android/splash/drawable-port-ldpi-screen.png" />
     <splash density="port-mdpi" src="resources/android/splash/drawable-port-mdpi-screen.png" />
     <splash density="port-hdpi" src="resources/android/splash/drawable-port-hdpi-screen.png" />
     <splash density="port-xhdpi" src="resources/android/splash/drawable-port-xhdpi-screen.png" />
     <splash density="port-xxhdpi" src="resources/android/splash/drawable-port-xxhdpi-screen.png" />
     <splash density="port-xxxhdpi" src="resources/android/splash/drawable-port-xxxhdpi-screen.png" />
-    <name>HiChat</name>
+    <name>rebrand.im</name>
     <description>
         Application HiChat, chat with your friend everywhere
     </description>
