Sredjena About stranica

--- a/Ionic Source/www/templates/settings/about.html
+++ b/Ionic Source/www/templates/settings/about.html
@@ -7,16 +7,11 @@
   <h1 class="title">About us</h1>
 </ion-header-bar>
 <ion-content class="about-main light-bg">
-	<img class="margin-auto padding" src="css/img/launcher.png" width="100px">
-	<div class="text-center stable">Version: 3.0.6.r4</div>
+	<img class="margin-auto padding" src="css/img/logo-bg.png" width="300px">
+	<div class="text-center stable">Version: 1.0.0</div>
 	<div class="list no-margin">
-		<a class="item">Featurs & Instructions</a>
-		<a class="item">Check for new version</a>
-		<a class="item">Review Hichat</a>
-		<a class="item">Follow us on Facebook</a>
-		<a class="item">Website: http://Hichatapp.com</a>
-		<a class="item">Email customer service: feedback@Hichatapp.com</a>
-		<a class="item">Online support</a>
+		<a class="item">Website: http://www.rebrand.im</a>
+		<a class="item">Email customer service: support@rebrand.im</a>
 	</div>
 </ion-content>
 </ion-view>
