Sredjeno prikazivanje svih kontakata

--- a/Ionic Source/www/templates/contacts/add.html
+++ b/Ionic Source/www/templates/contacts/add.html
@@ -8,7 +8,7 @@
 </ion-header-bar>
  <ion-content scroll="false" ng-controller="areacodeCtrl">
 	<div class="list add-contacts-main no-margin no-padding">
-	  <div class="item item-divider">Add contacts by phone number</div>
+	  <div class="item item-divider">Add contacts by email</div>
 	  <div ng-if="warning" class="light-bg text-center assertive">No result.<br/>Please try again.</div>
 	  <a class="item item-icon-right" ng-click="showareaCode()">{{choseArea.name}} (+{{choseArea.areacode}})<i class="icon ion-ios-arrow-right"></i></a>
 	  <div class="item item-input" style="padding-right:10px">
