Obrisan gender, sve hichat promenjeno u rebrandim, register dugme sredjeno

--- a/Ionic Source/www/templates/sign/walkthrough.html
+++ b/Ionic Source/www/templates/sign/walkthrough.html
@@ -4,7 +4,7 @@
 	<div class="walkthrough-footer">
 	<button ui-sref="login" class="button button-positive width-60 margin-auto">LOGIN</button>
 	<div class="text-center padding-vertical">
-		<a ui-sref="register" class="icon-right">Register a new account <i class="ion-ios-arrow-right"></i></a>
+		<button ui-sref="register" class="button button-positive width-60 margin-auto">REGISTER</button>
 	</div>
 	</div>
 </ion-content>
