Mala promena u tekstu na profiles strani

--- a/Ionic Source/www/templates/settings/profiles.html
+++ b/Ionic Source/www/templates/settings/profiles.html
@@ -16,7 +16,7 @@
 	</div>
 	<div class="list no-margin">
 		<a class="item item-icon-right" ng-click="showChangeName()">{{profile.name}}<i class="positive icon ion-edit"></i></a>
-		<div class="item item-divider">This is not a login name or pin code. This name will be the contact hichat found</div>
+		<div class="item item-divider">This is not a login name or pin code. This name will be the contact 'rebrandim' found</div>
 	</div>
 	<div class="list light-bg" style="padding:16px">
 		<div class="positive">Phone number</div>
