Kreiran novi dizajn za deo get started- pocetna strana, login i register

--- a/Ionic Source/www/templates/sign/walkthrough.html
+++ b/Ionic Source/www/templates/sign/walkthrough.html
@@ -1,10 +1,13 @@
 <link href="css/sign.css" rel="stylesheet">
-<ion-content scroll="false">
-	<div class="row height-50 bg-full" style="background-image:url(css/img/logo-bg.png); height: 250px; width 280px; margin-top: 80px;"></div>
+<ion-content scroll="false" id="getStarted">
+	<div id="getStartedCover"></div>
 	<div class="walkthrough-footer">
-	<button ui-sref="login" class="button button-positive width-60 margin-auto">LOGIN</button>
-	<div class="text-center padding-vertical">
-		<button ui-sref="register" class="button button-positive width-60 margin-auto">REGISTER</button>
-	</div>
+		<div class="bg-full" id="brandName"></div>
+		<div class="bg-full" id="logo"></div>
+		<p id="getStartedText">Cross platform chat app</p>
+		<div id="terms">
+			<a href="#" id="termsLink">Terms and conditions</a>
+		</div>
+		<button ui-sref="register" class="button button-positive width-60 margin-auto" id="getStartedBtn">GET STARTED</button>
 	</div>
 </ion-content>
