--- a/Ionic Source/www/templates/sign/login.html
+++ b/Ionic Source/www/templates/sign/login.html
@@ -1,4 +1,34 @@
-<link href="css/sign.css" rel="stylesheet">
+<link href="css/login.css" rel="stylesheet">
+<ion-content scroll="false" id="getStarted">
+	<div id="getStartedCover"></div>
+	<div class="walkthrough-footer">
+		<div class="bg-full" id="brandName"></div>
+		<div class="bg-full" id="logo"></div>
+		<p id="getStartedText">Cross platform chat app</p>
+	</div>
+	<div id="registerForm">
+		<p id="formTitle">SIGN IN</p>
+		<div class="userInputDiv" ng-click="changeColorEmail()" id="emailDiv">
+			<div class="iconsDiv">
+				<i class="ion-ios-email-outline icons" id="emailIcon"></i>
+			</div>
+			<input type="text" class="userInput" placeholder="Email">
+		</div>
+		<div class="userInputDiv" ng-click="changeColorPass()" id="passDiv">
+			<div class="iconsDiv">
+				<i class="ion-ios-locked-outline icons" id="passIcon"></i>
+			</div>
+			<input type="password" class="userInput" placeholder="Password">
+			<div class="eyeIconDiv">
+				<i class="ion-ios-eye-outline eyeIcon" id="eyeIcon"></i>
+			</div>
+		</div>
+		<button class="simpleBtn">LOGIN</button>
+		<p class="formBottomText" ng-click="showForgot()"><u>Forgot password?</u></p>
+	</div>
+</ion-content>
+
+<!-- <link href="css/sign.css" rel="stylesheet">
 <ion-header-bar align-title="left" class="bar-positive">
   <div class="buttons">
     <button class="button button-icon ion-android-arrow-back" ng-click="goBack()"></button>
@@ -27,4 +57,4 @@
 	<div class="text-center padding-vertical">
 		<a ng-click="showForgot()" class="icon-right">Forgot password ?</a>
 	</div>
-</ion-content>
+</ion-content> -->
