--- a/Ionic Source/www/templates/sign/login.html
+++ b/Ionic Source/www/templates/sign/login.html
@@ -9,14 +9,14 @@
 	<div id="registerForm">
 		<p id="formTitle">SIGN IN</p>
 		<div class="userInputDiv" ng-click="changeColorEmail()" id="emailDiv">
-			<div class="iconsDiv">
-				<i class="ion-ios-email-outline icons" id="emailIcon"></i>
+			<div class="loginIconsDiv">
+				<i class="ion-ios-email-outline loginIcons" id="emailIcon"></i>
 			</div>
 			<input type="text" class="userInput" placeholder="Email">
 		</div>
 		<div class="userInputDiv" ng-click="changeColorPass()" id="passDiv">
-			<div class="iconsDiv">
-				<i class="ion-ios-locked-outline icons" id="passIcon"></i>
+			<div class="loginIconsDiv">
+				<i class="ion-ios-locked-outline loginIcons" id="passIcon"></i>
 			</div>
 			<input type="password" class="userInput" placeholder="Password">
 			<div class="eyeIconDiv">
