--- a/Ionic Source/www/templates/sign/walkthrough.html
+++ b/Ionic Source/www/templates/sign/walkthrough.html
@@ -11,3 +11,15 @@
 		<button ui-sref="register" class="button button-positive width-60 margin-auto" id="getStartedBtn">GET STARTED</button>
 	</div>
 </ion-content>
+
+<!-- <link href="css/sign.css" rel="stylesheet">
+<ion-content scroll="false">
+	<div class="row height-50 bg-full" style="background-image:url(css/img/logo-bg.png); height: 250px; width 280px; margin-top: 80px;"></div>
+	<div class="walkthrough-footer">
+	<button ui-sref="login" class="button button-positive width-60 margin-auto">LOGIN</button>
+	<div class="text-center padding-vertical">
+		<button ui-sref="register" class="button button-positive width-60 margin-auto">REGISTER</button>
+	</div>
+	</div>
+</ion-content>
+ -->
