Izmenjen register- eliminisani social dugmici

--- a/Ionic Source/www/templates/sign/register.html
+++ b/Ionic Source/www/templates/sign/register.html
@@ -8,19 +8,7 @@
 	</div>
 	<div id="registerForm">
 		<p id="formTitle">SIGN UP</p>
-		<div class="btnWithIconDiv" id="facebook">
-			<div class="iconsDiv" id="facebookIconDiv">
-				<i class="ion-social-facebook icons" id="facebookIcon"></i>
-			</div>
-			<button class="btnWithIcon">Sign up with Facebook</button>			
-		</div>
-		<div class="btnWithIconDiv" id="google">
-			<div class="iconsDiv">
-				<i class="ion-social-googleplus icons"></i>
-			</div>
-			<button class="btnWithIcon">Sign up with Google+</button>			
-		</div>
-		<button class="simpleBtn">Sign up with email</button>
+		<button class="simpleBtn">Register</button>
 		<p class="formBottomText" ui-sref="login">Already have an account? <u>SIGN IN</u></p>
 	</div>
 </ion-content>
