--- a/Ionic Source/www/css/tabs.css
+++ b/Ionic Source/www/css/tabs.css
@@ -1,3 +1,11 @@
 ion-tabs.tabs-color-active-light .tab-item{color:#99d2f5}
 ion-tabs .tab-item-active{border-bottom:3px solid #fff}
 ion-tabs .ion-chatbubble-working:after{top:5px}
+.myTab {
+	font-size: 13px !important;
+}
+.aboveTab {
+	widows: 100%;
+	height: 50px;
+	background-color: #99d2f5;
+}
