--- a/Ionic Source/www/templates/sign/login.html
+++ b/Ionic Source/www/templates/sign/login.html
@@ -10,7 +10,7 @@
 		<p id="formTitle">SIGN IN</p>
 		<div class="userInputDiv" ng-click="changeColorEmail()" id="emailDiv">
 			<div class="loginIconsDiv">
-				<i class="ion-ios-email-outline loginIcons" id="emailIcon"></i>
+				<i class="ion-ios-telephone-outline loginIcons" id="emailIcon"></i>
 			</div>
 			<input type="number" class="userInput" placeholder="Enter phone number" ng-model="data.phone">
 		</div>
