--- a/Ionic Source/www/templates/messages/tabs-input.html
+++ b/Ionic Source/www/templates/messages/tabs-input.html
@@ -1,10 +1,10 @@
-<ion-tabs>
+fT<ion-tabs>
   <ion-tab icon="icon-text" on-select="messageInput('text')">
 	<ion-pane>
 	<ion-content scroll="false">
 	<div class="list messages-input-text padding-horizontal">
 	  <div class="item item-input no-padding no-border no-margin height-100">
-		<input type="text" placeholder="Type your message" class="height-100" ng-model="inputText.content">
+		<input type="text" placeholder="Type a message" class="height-100" ng-model="inputText.content" style="font-size: 18px !important;">
 	  <button class="button button-icon icon-planes stable" ng-disabled="!inputText.content" ng-click="sendText()"></button>
 	  </div>
 	</div>
