--- a/Ionic Source/www/css/sign.css
+++ b/Ionic Source/www/css/sign.css
@@ -31,7 +31,7 @@
 	height: 130px;
 	background-size: contain;
 	margin-left: 32%;
-	margin-top: 100px;
+	margin-top: 90px;
 	z-index: 10;
 }
 #getStartedText {
@@ -40,7 +40,7 @@
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
-	margin-top: 100px;
+	margin-top: 20%;
 }
 #terms {
 	text-align: center;
@@ -56,7 +56,7 @@
 	border-radius: 0px !important;
 	width: 90% !important;
 	height: 50px !important;
-	margin-top: 110px !important;
+	margin-top: 90px !important;
 }
 .walkthrough-footer {
 	position:absolute;
