--- a/Ionic Source/www/templates/sign/walkthrough.html
+++ b/Ionic Source/www/templates/sign/walkthrough.html
@@ -1,6 +1,6 @@
 <link href="css/sign.css" rel="stylesheet">
 <ion-content scroll="false" id="getStarted">
-	<div id="getStartedCover"></div>
+	<div id="getStartedCover" style="height: 100% !important;"></div>
 	<div class="walkthrough-footer">
 		<div class="bg-full" id="brandName"></div>
 		<div class="bg-full" id="logo"></div>
