--- a/Ionic Source/www/templates/sign/login.html
+++ b/Ionic Source/www/templates/sign/login.html
@@ -1,13 +1,17 @@
 <link href="css/login.css" rel="stylesheet">
 <ion-content scroll="false" id="getStarted" ng-controller="areacodeCtrl">
-	<div id="getStartedCover"></div>
+	<div id="getStartedCover" style="height: 340px !important;"></div>
 	<div class="walkthrough-footer">
 		<div class="bg-full" id="brandName"></div>
 		<div class="bg-full" id="logo"></div>
 		<p id="getStartedText">Cross platform chat app</p>
 	</div>
-	<div id="registerForm">
+	<div id="registerForm" style="margin-top: 340px !important;">
 		<p id="formTitle">SIGN IN</p>
+		<div class="list login-main">
+		<div class="padding text-center login-notifi" ng-show="data.notification">
+			<span>{{data.notification}}</span>
+		</div>
 		<div class="userInputDiv" ng-click="changeColorEmail()" id="emailDiv">
 			<div class="loginIconsDiv">
 				<i class="ion-ios-telephone-outline loginIcons" id="emailIcon"></i>
