--- a/Ionic Source/www/templates/sign/register.html
+++ b/Ionic Source/www/templates/sign/register.html
@@ -1,12 +1,12 @@
 <link href="css/register.css" rel="stylesheet">
 <ion-content scroll="false" id="getStarted">
-	<div id="getStartedCover"></div>
+	<div id="getStartedCover" style="height: 400px !important;"></div>
 	<div class="walkthrough-footer">
 		<div class="bg-full" id="brandName"></div>
 		<div class="bg-full" id="logo"></div>
 		<p id="getStartedText">Cross platform chat app</p>
 	</div>
-	<div id="registerForm">
+	<div id="registerForm" style="margin-top: 400px !important;">
 		<p id="formTitle">SIGN UP</p>
 		<button class="simpleBtn" ui-sref="signup">Register</button>
 		<p class="formBottomText" ui-sref="login">Already have an account? <u>SIGN IN</u></p>
