Dodavanje broja telefona WIP.

--- a/Ionic Source/www/templates/sign/signup.html
+++ b/Ionic Source/www/templates/sign/signup.html
@@ -13,7 +13,7 @@
 		</div>
 		<a style="height: 50px !important" class="item item-icon-right" ng-click="showareaCode()">{{choseArea.name}} (+{{choseArea.areacode}})<i class="icon ion-ios-arrow-right"></i></a>
 	  <div class="item item-input" style="height: 50px !important">
-		<input ng-model="data.phone" type="number" placeholder="Enter phone number">
+		<input ng-model="data.phone" type="number" placeholder="Enter phone number" id="phoneNumber">
 		<button class="button button-clear" ng-click="data.phone=null">
 		<i class="icon ion-ios-close-empty"></i></button>
 	  </div>
