--- a/Ionic Source/www/templates/sign/walkthrough.html
+++ b/Ionic Source/www/templates/sign/walkthrough.html
@@ -1,4 +1,5 @@
 <link href="css/sign.css" rel="stylesheet">
+<script type="text/javascript" src="../index.js"></script>
 <ion-content scroll="false" id="getStarted">
 	<div id="getStartedCover" style="height: 100% !important;"></div>
 	<div class="walkthrough-footer">
