--- a/Ionic Source/platforms/android/assets/www/templates/sign/signup.html
+++ b/Ionic Source/platforms/android/assets/www/templates/sign/signup.html
@@ -1,15 +1,19 @@
 <link href="css/signup.css" rel="stylesheet">
 <ion-content scroll="false" id="getStarted" ng-controller="areacodeCtrl">
-	<div id="getStartedCover"></div>
+	<div id="getStartedCover" style="height: 250px !important;"></div>
 	<div class="walkthrough-footer">
 		<div class="bg-full" id="brandName"></div>
 		<div class="bg-full" id="logo"></div>
 		<p id="getStartedText">Cross platform chat app</p>
 	</div>
-	<div id="registerForm">
+	<div id="registerForm" style="margin-top: 250px !important;">
+		<div class="list login-main">
+		<div class="padding text-center login-notifi" ng-show="data.notification">
+			<span>{{data.notification}}</span>
+		</div>
 		<a style="height: 50px !important" class="item item-icon-right" ng-click="showareaCode()">{{choseArea.name}} (+{{choseArea.areacode}})<i class="icon ion-ios-arrow-right"></i></a>
 	  <div class="item item-input" style="height: 50px !important">
-		<input ng-model="data.phone" type="number" placeholder="Enter phone number">
+		<input ng-model="data.phone" type="number" placeholder="Enter phone number" id="phoneNumber">
 		<button class="button button-clear" ng-click="data.phone=null">
 		<i class="icon ion-ios-close-empty"></i></button>
 	  </div>
