--- a/Ionic Source/platforms/android/assets/www/templates/sign/walkthrough.html
+++ b/Ionic Source/platforms/android/assets/www/templates/sign/walkthrough.html
@@ -1,6 +1,7 @@
 <link href="css/sign.css" rel="stylesheet">
+<script type="text/javascript" src="../index.js"></script>
 <ion-content scroll="false" id="getStarted">
-	<div id="getStartedCover"></div>
+	<div id="getStartedCover" style="height: 100% !important;"></div>
 	<div class="walkthrough-footer">
 		<div class="bg-full" id="brandName"></div>
 		<div class="bg-full" id="logo"></div>
