--- a/Ionic Source/www/templates/sign/login.html
+++ b/Ionic Source/www/templates/sign/login.html
@@ -1,12 +1,12 @@
-<link href="css/login.css" rel="stylesheet">
-<ion-content scroll="false" id="getStarted" ng-controller="areacodeCtrl">
-	<div id="getStartedCover" style="height: 340px !important;"></div>
-	<div class="walkthrough-footer">
-		<div class="bg-full" id="brandName"></div>
-		<div class="bg-full" id="logo"></div>
-		<p id="getStartedText">Cross platform chat app</p>
+<link href="css/sign.css" rel="stylesheet">
+<ion-content scroll="false" id="getStartedLogin" ng-controller="areacodeCtrl">
+	<div id="getStartedCoverLogin" style="height: 340px !important;"></div>
+	<div class="walkthrough-footerLogin">
+		<div class="bg-full" id="brandNameLogin"></div>
+		<div class="bg-full" id="logoLogin"></div>
+		<p id="getStartedTextLogin">Cross platform chat app</p>
 	</div>
-	<div id="registerForm" style="margin-top: 340px !important;">
+	<div id="registerFormLogin" style="margin-top: 340px !important;">
 		<p id="formTitle">SIGN IN</p>
 		<div class="list login-main">
 		<div class="padding text-center login-notifi" ng-show="data.notification">
