--- a/Ionic Source/www/templates/sign/signup.html
+++ b/Ionic Source/www/templates/sign/signup.html
@@ -1,12 +1,12 @@
-<link href="css/signup.css" rel="stylesheet">
-<ion-content scroll="false" id="getStarted" ng-controller="areacodeCtrl">
-	<div id="getStartedCover" style="height: 250px !important;"></div>
-	<div class="walkthrough-footer">
-		<div class="bg-full" id="brandName"></div>
-		<div class="bg-full" id="logo"></div>
-		<p id="getStartedText">Cross platform chat app</p>
+<link href="css/sign.css" rel="stylesheet">
+<ion-content scroll="false" id="getStartedSign" ng-controller="areacodeCtrl">
+	<div id="getStartedCoverSign" style="height: 250px !important;"></div>
+	<div class="walkthrough-footerSign">
+		<div class="bg-full" id="brandNameSign"></div>
+		<div class="bg-full" id="logoSign"></div>
+		<p id="getStartedTextSign">Cross platform chat app</p>
 	</div>
-	<div id="registerForm" style="margin-top: 250px !important;">
+	<div id="registerFormSign" style="margin-top: 250px !important;">
 		<div class="list login-main">
 		<div class="padding text-center login-notifi" ng-show="data.notification">
 			<span>{{data.notification}}</span>
@@ -33,7 +33,7 @@
 		<button class="button button-clear" ng-click="data.repassword=null">
 		<i class="icon ion-ios-close-empty"></i></button>
 	  </div>
-		<button class="button button-positive width-60 margin-auto simpleBtn" ng-click="register()">REGISTER</button>
+		<button class="button button-positive width-60 margin-auto simpleBtnSign" ng-click="register()">REGISTER</button>
 	</div>
 </ion-content>
 
