Moj doprinos MVP-iju: Odradjena podesavanja kao sto pise na Trello, prikazan search, sklonjeni viskovi kao sto su reccomended contacts...

--- a/Ionic Source/www/templates/contacts/index.html
+++ b/Ionic Source/www/templates/contacts/index.html
@@ -3,14 +3,14 @@
  <ion-content>
 	<div class="list contacts-header no-margin">
 	  <div class="item item-divider light-bg positive">CONTACTS</div>
-		<a class="item item-icon-left item-icon-right" ui-sref="tab.recommended">
+		<!-- <a class="item item-icon-left item-icon-right" ui-sref="tab.recommended">
 			<i class="icon icon-linked positive"></i>
 			<span>
 				<span ng-show="contactRecommended.length >0">(+{{contactRecommended.length-1}})</span>
 				Recommended contacts
 			</span>
 			<i class="icon ion-ios-arrow-right"></i>
-		</a>
+		</a> -->
 		<a class="item item-icon-left" style="color:#98a2a7" ui-sref="tab.addContacts">
 			<i class="icon icon-add-border-dashed"></i>
 			<span>Add contacts</span>
