--- a/Ionic Source/www/templates/settings/index.html
+++ b/Ionic Source/www/templates/settings/index.html
@@ -10,7 +10,7 @@
 	</div></div>
 	</div>
 	<div class="list settings-main padding-horizontal">
-	  <a class="item item-icon-left no-border border-bottom" ui-sref="settingsMessages" ng-hide="true"><i class="icon icon-notification"></i>Messages and notification</a>
+	  <a class="item item-icon-left no-border border-bottom" ui-sref="settingsMessages" ><i class="icon icon-notification"></i>Messages and notification</a>
 	  <a class="item item-icon-left no-border border-bottom" ui-sref="settingsContacts" ng-hide="true"><i class="icon ion-person"></i>Contacts</a>
 	  <a class="item item-icon-left no-border border-bottom" ui-sref="settingsLanguages" ng-hide="true"><i class="icon icon-language"></i>Languages and fonts</a>
 	  <a class="item item-icon-left no-border border-bottom" ui-sref="about"><i class="icon icon-info-border"></i>About us</a>
