--- a/Ionic Source/www/templates/settings/messages.html
+++ b/Ionic Source/www/templates/settings/messages.html
@@ -9,7 +9,7 @@
 <ion-content class="messages-main">
 <div class="list">
 	<div class="item item-divider light-bg stable">Messages</div>
-	<li class="item item-toggle">
+	<!-- <li class="item item-toggle">
 	<span>Auto play voice messages</span><p>Turn on to auto play new voice messages</p>
      <label class="toggle toggle-calm" ng-click="changeMessages('auto_play')">
        <input type="checkbox" ng-model="settings.messages.auto_play">
@@ -17,8 +17,8 @@
          <div class="handle"></div>
        </div>
      </label>
-	</li>
-	<li class="item item-toggle">
+	</li> -->
+	<!-- <li class="item item-toggle">
 	<span>Reply SMS with Hichat</span><p>Turn on to reply text messages via Hichat</p>
      <label class="toggle toggle-calm" ng-click="changeMessages('reply_sms')">
        <input type="checkbox" ng-model="settings.messages.reply_sms">
@@ -26,8 +26,8 @@
          <div class="handle"></div>
        </div>
      </label>
-	</li>
-	<li class="item item-toggle">
+	</li> -->
+	<!-- <li class="item item-toggle">
 	<span>Replace send button with Enter</span><p>Turn on to send messages by pressing Enter button on keyboard</p>
      <label class="toggle toggle-calm" ng-click="changeMessages('replace_send')">
        <input type="checkbox" ng-model="settings.messages.replace_send">
@@ -35,8 +35,8 @@
          <div class="handle"></div>
        </div>
      </label>
-	</li>
-	<li class="item item-toggle">
+	</li> -->
+	<!-- <li class="item item-toggle">
 	<span>Show “Seen” status</span><p>If you and your friend turn this on, it will show Seen status below every messages</p>
      <label class="toggle toggle-calm" ng-click="changeMessages('show_seen')">
        <input type="checkbox" ng-model="settings.messages.show_seen">
@@ -44,8 +44,8 @@
          <div class="handle"></div>
        </div>
      </label>
-	</li>
-	<li class="item item-toggle">
+	</li> -->
+	<!-- <li class="item item-toggle">
 	<span>Remind your friend's birthday</span><p>Turn this on to receive friend's birthday notifications</p>
      <label class="toggle toggle-calm" ng-click="changeMessages('remind_friend')">
        <input type="checkbox" ng-model="settings.messages.remind_friend">
@@ -53,8 +53,8 @@
          <div class="handle"></div>
        </div>
      </label>
-	</li>
-	<li class="item item-toggle">
+	</li> -->
+	<!-- <li class="item item-toggle">
 	<span>Display sticker suggestions</span><p>Display sticker suggestions based on entered text.</p>
      <label class="toggle toggle-calm" ng-click="changeMessages('display_sticker')">
        <input type="checkbox" ng-model="settings.messages.display_sticker">
@@ -62,13 +62,13 @@
          <div class="handle"></div>
        </div>
      </label>
-	</li>
-	<a class="item item-icon-right"><span>Background image</span><p>Change default background image</p>
+	</li> -->
+	<!-- <a class="item item-icon-right"><span>Background image</span><p>Change default background image</p>
 	<i class="icon ion-ios-arrow-right"></i></a>
 	<a class="item item-icon-right"><span>Backup & Restore</span><p>Backup messages to server and restore them on demand</p>
-	<i class="icon ion-ios-arrow-right"></i></a>
+	<i class="icon ion-ios-arrow-right"></i></a> -->
 	
-	<div class="item item-divider light-bg stable">Incomming Messages</div>
+	<!-- <div class="item item-divider light-bg stable">Incomming Messages</div> -->
 	<li class="item item-toggle">
 	<span>Play sound on incoming messages</span><p>On incoming messages</p>
      <label class="toggle toggle-calm" ng-click="changeMessages('play_sound')">
@@ -78,7 +78,7 @@
        </div>
      </label>
 	</li>
-	<li class="item item-toggle">
+	<!-- <li class="item item-toggle">
 	<span>Vibrate on messages</span><p>On incoming messages</p>
      <label class="toggle toggle-calm" ng-click="changeMessages('vibrate')">
        <input type="checkbox" ng-model="settings.messages.vibrate">
@@ -86,7 +86,7 @@
          <div class="handle"></div>
        </div>
      </label>
-	</li>
+	</li> -->
 	<li class="item item-toggle">
 	<span>Show notifications from incoming messages</span><p>Show notifications in the notification bar when receiving messages</p>
      <label class="toggle toggle-calm" ng-click="changeMessages('notification')">
@@ -96,7 +96,7 @@
        </div>
      </label>
 	</li>
-	<li class="item item-toggle">
+	<!-- <li class="item item-toggle">
 	<span>Messages preview</span><p>Show messages in notification bar</p>
      <label class="toggle toggle-calm" ng-click="changeMessages('preview')">
        <input type="checkbox" ng-model="settings.messages.preview">
@@ -104,7 +104,7 @@
          <div class="handle"></div>
        </div>
      </label>
-	</li>
+	</li> -->
 </div>
 </ion-content>
 </ion-view>
